small web changes

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -29,3 +29,4 @@ flutter:
     - assets/fitna_icon_end_map_a1.png
     - assets/molen.png
     - assets/erminelogo.png
+    - assets/favicon-96x96.png
