--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -27,6 +27,6 @@ flutter:
     - assets/fitna_icon_location_map_a1.png
     - assets/fitna_icon_start_map_a1.png
     - assets/fitna_icon_end_map_a1.png
-    - assets/molen.png
+    - assets/molen.jpg
     - assets/erminelogo.png
     - assets/favicon-96x96.png
